# bloa-src

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bloat.h  chunk.c  chunk.h  compiler.c  compiler.h  gc.c  gc.h  lexer.c  lexer.h  main.c  parser.c  parser.h  setup.py  value.c  value.h  vm.c  vm.h
.github/workflows/: build.yml  main.yml  release.yml
bloa/: cli.py  interpreter.py  repl.py  setup.py
bloa/bloa_lang.egg-info/: SOURCES.txt
bloa/examples/: demo.bloa  hello.bloa
bloa/stdlib/: io.py  math.py  net.py  random.py  string.py  time.py
bloa_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
include/bloa/: ast.hpp  env.hpp  interpreter.hpp  parser.hpp  stdlib.hpp
older changelogs/: 1.0.0.md
src/: interpreter.cpp  main.cpp  parser.cpp  stdlib.cpp
tests/: run_tests.sh  test_csv  test_json  test_misc.bloa
